--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,9 +1,16 @@
+@import "variables";
+
 * {
   box-sizing: border-box;
 }
 
 body {
+  background-color: $mainBackgroundColor;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+h1, h2 {
+  color: $headingColor;
 }
